# nexisgen

./: .dockerignore  .env.example  README.md  pyproject.toml
docker/: compose.env.example  docker-compose.owner-sync-worker.yml  docker-compose.source-auth-validator.yml  docker-compose.validator.yml  validation-api.env.example  validator.env.example
docker/sql/: 001_validation_evidence.sql
docs/: validator.md
nexis/: cli.py  config.py  protocol.py
nexis/api/: app.py  repository.py  schemas.py
nexis/chain/: metagraph.py
nexis/miner/: captioner.py
nexis/validator/: caption_semantic.py  category_check.py  owner_sync.py  pipeline.py  reporting.py  sampling.py
tests/: test_api_app.py  test_caption_semantic.py  test_cli_async_helpers.py  test_e2e_validator.py  test_sampling.py  test_validator_exclusions.py  test_validator_owner_sync.py  test_validator_reporting.py
